fix typewiter & alignment

--- a/pages/expertise/style.scss
+++ b/pages/expertise/style.scss
@@ -1,7 +1,6 @@
 .expertise {
 	justify-content: center;
-	padding-top: 90px;
-
+	padding-top: 110px;
 }
 
 @media only screen and (max-width: 1199px) {
