--- a/src/Components/Card/style.scss
+++ b/src/Components/Card/style.scss
@@ -34,7 +34,7 @@
 		color: #5d5d5d;
 		text-align: center;
 		.content__info {
-			width: 80%;
+			width: 90%;
 		}
 
 		.content {
