--- a/src/Components/Header/style.scss
+++ b/src/Components/Header/style.scss
@@ -270,6 +270,11 @@
 					display: flex;
 					flex-direction: column;
 					align-items: center;
+
+					.nav-item {
+						transition: none;
+					}
+
 				}
 			}
 			&-down {
